desktop/core/src/desktop/static/desktop/less/hue-assist.less
/* ... */
.sql-context-flex-fill.context-sample-container {
  margin: 0;
}

.assist-assistant-panel {
  left: 0;

  .assist-flex-panel > div {
    padding-left: 10px;
  }

  .assist-no-entries {
    padding: 5px 10px;
  }

  .risk-list {
    list-style: none;
    margin: 0 0 0 10px;

    .risk-list-high {
      color: @cui-red-700;
    }

    .risk-list-normal {
      color: @cui-orange-700;
    }

    .risk-list-description {
      margin-left:5px;
      white-space: normal;
      font-style: italic;
    }
  }
}

